# docker-services-cli

./: .editorconfig  .git-blame-ignore-revs  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
docker_services_cli/: __init__.py  cli.py  config.py  docker-services.yml  env.py  services.py
docs/: api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  license.rst  usage.rst
tests/: test_env.py
